--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
         "test:ci": "jest --ci"
     },
     "dependencies": {
+        "axios": "^0.27.2",
+        "jsonwebtoken": "^8.5.1",
         "next": "12.3.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-jwt": "^1.1.6",
         "util": "^0.12.4"
     },
     "devDependencies": {
@@ -39,9 +42,11 @@
         "@storybook/testing-library": "^0.0.13",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
+        "@types/jsonwebtoken": "^8.5.9",
         "@types/node": "18.7.18",
         "@types/react": "18.0.20",
         "@types/react-dom": "18.0.6",
+        "@types/react-test-renderer": "^18.0.0",
         "babel-loader": "^8.2.5",
         "cross-env": "^7.0.3",
         "eslint": "8.23.1",
