--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "next": "12.3.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-file-base64": "^1.0.3",
         "react-jwt": "^1.1.6",
         "util": "^0.12.4"
     },
